--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -1,42 +1,42 @@
 body {
-    margin: 0;
-    background-color: #eeeeee;
+  margin: 0;
+  background-color: #eeeeee;
 }
 html,
 body,
 #app {
-    box-sizing: border-box;
-    height: 100%;
+  box-sizing: border-box;
+  height: 100%;
 }
 #app > div {
-    height: 90%;
+  height: 90%;
 }
 
 .welcome {
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .login-form {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 .login {
-    padding: 20px;
-    background-color: #fafafa;
-    box-shadow: 1px 1px 1px grey;
+  padding: 20px;
+  background-color: #fafafa;
+  box-shadow: 1px 1px 1px grey;
 }
 .button-bar {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .subject {
-    padding: 10px;
-    margin: 10px 0 10px 0;
-    height: 20rem;
-    display: flex;
-    justify-content: space-between;
+  padding: 10px;
+  margin: 10px 0 10px 0;
+  height: 20rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 /* .subjects-landing-page > .row > div {
@@ -55,73 +55,80 @@ body,
 }
  */
 .subjects-landing-page {
-    padding: 70px;
+  padding: 70px;
 }
 
 .card-block {
-    padding: 10px;
+  padding: 10px;
 }
 .question-block {
-    border-top: 1px solid rgba(0, 0, 0, 0.125);
-    padding-top: 5px;
-    margin-bottom: 10px;
+  border-top: 1px solid rgba(0, 0, 0, 0.125);
+  padding-top: 5px;
+  margin-bottom: 10px;
 }
 .question {
-    margin: 2px 0 2px 0;
+  margin: 2px 0 2px 0;
 }
 
 .footer {
-    bottom: 0;
-    height: 20px;
-    background-color: #343a40;
-    left: 0;
-    position: fixed;
-    transition: transform 0.2s;
-    width: 100%;
+  bottom: 0;
+  height: 20px;
+  background-color: #343a40;
+  left: 0;
+  position: fixed;
+  transition: transform 0.2s;
+  width: 100%;
 }
 .login-errorbox {
-    background: #dc3545;
-    text-align: center;
-    border-radius: 15px;
-    width: 90%;
-    color: #f8f9fa;
-    margin: 10px auto;
-    font-weight: bold;
+  background: #dc3545;
+  text-align: center;
+  border-radius: 15px;
+  width: 90%;
+  color: #f8f9fa;
+  margin: 10px auto;
+  font-weight: bold;
 }
 .landing-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 .container-fluid {
-    height: 100%;
+  height: 100%;
 }
 
 .card-404 {
-    padding: 10px;
-    text-align: center;
-    width: 30%;
+  padding: 10px;
+  text-align: center;
+  width: 30%;
 }
 .question-input-card {
-    width: 100%;
-    margin: 10px 0;
-    border-top: 1px solid #343a40;
-    padding: 15px;
-    display: grid;
-    grid-template-columns: 0.5fr 2fr 0.1fr;
-    grid-gap: 5px;
+  width: 100%;
+  margin: 10px 0;
+  border-top: 1px solid #343a40;
+  padding: 15px;
+  display: grid;
+  grid-template-columns: 0.5fr 2fr 0.1fr;
+  grid-gap: 5px;
 }
 .question-input {
-    width: 70%;
+  width: 70%;
 }
 .delete-question {
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 1;
 }
 .question-type-replicator {
-    display: flex;
-    align-items: center;
-    width: 75%;
+  display: flex;
+  align-items: center;
+  width: 75%;
+}
+
+.question-submit-option {
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
